@@ -1,0 +1,53 @@
+<!--
+  ~ Copyright (C) 2010 Institute for Computational Biomedicine,
+  ~                    Weill Medical College of Cornell University
+  ~
+  ~  This program is free software; you can redistribute it and/or modify
+  ~  it under the terms of the GNU General Public License as published by
+  ~  the Free Software Foundation; either version 3 of the License, or
+  ~  (at your option) any later version.
+  ~
+  ~  This program is distributed in the hope that it will be useful,
+  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~  GNU General Public License for more details.
+  ~
+  ~  You should have received a copy of the GNU General Public License
+  ~  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
+<jsap>
+    <parameters>
+
+        <flaggedOption>
+            <id>output</id>
+            <shortFlag>o</shortFlag>
+            <longFlag>output</longFlag>
+            <required>false</required>
+            <help>Where the sequence variations will be written.</help>
+        </flaggedOption>
+        <flaggedOption>
+            <id>format</id>
+            <shortFlag>f</shortFlag>
+            <longFlag>format</longFlag>
+            <required>false</required>
+            <defaults>
+                <string>tsv</string>
+            </defaults>
+            <help>Format of the output file (tsv).</help>
+        </flaggedOption>
+        <unflaggedOption>
+            <id>input</id>
+            <required>true</required>
+            <greedy>true</greedy>
+            <help>The basenames of input alignments.</help>
+        </unflaggedOption>
+        <flaggedOption>
+            <id>include-reference-names</id>
+            <shortFlag>r</shortFlag>
+            <longFlag>include-reference-names</longFlag>
+            <required>false</required>
+            <help>When provided, only process the reference identifiers listed in this comma separated list. To process only chromosome 19 and 1, if sequences are identified by "1" and "19", use: --include-reference-names 1,19 </help>
+        </flaggedOption>
+    </parameters>
+</jsap>
